[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/components/content/arrow-left.png" type="Texture" id=1]
[ext_resource path="res://src/components/content/arrow-right.png" type="Texture" id=2]
[ext_resource path="res://src/components/content/arrow-up.png" type="Texture" id=3]
[ext_resource path="res://src/components/content/arrow-down.png" type="Texture" id=4]
[ext_resource path="res://src/components/controls.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.117647, 0.117647, 0.196078 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.121569, 0.117647, 0.117647, 0.196078 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.121569, 0.117647, 0.117647, 0.196078 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.121569, 0.117647, 0.117647, 0.196078 )

[node name="controls" type="Node"]
script = ExtResource( 5 )

[node name="leftbtn" type="Button" parent="."]
margin_left = 1495.0
margin_top = 840.0
margin_right = 1609.0
margin_bottom = 983.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upbtn" type="Button" parent="."]
margin_left = 1610.0
margin_top = 749.0
margin_right = 1715.0
margin_bottom = 899.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightbtn" type="Button" parent="."]
margin_left = 1730.0
margin_top = 833.0
margin_right = 1838.0
margin_bottom = 983.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="downbtn" type="Button" parent="."]
margin_left = 1616.0
margin_top = 913.0
margin_right = 1724.0
margin_bottom = 1063.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 3 )
action_mode = 0
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="leftbtn" to="." method="_on_leftbtn_button_down"]
[connection signal="button_up" from="leftbtn" to="." method="_on_leftbtn_button_up"]
[connection signal="button_down" from="upbtn" to="." method="_on_upbtn_button_down"]
[connection signal="button_up" from="upbtn" to="." method="_on_upbtn_button_up"]
[connection signal="button_down" from="rightbtn" to="." method="_on_rightbtn_button_down"]
[connection signal="button_up" from="rightbtn" to="." method="_on_rightbtn_button_up"]
[connection signal="button_down" from="downbtn" to="." method="_on_downbtn_button_down"]
[connection signal="button_up" from="downbtn" to="." method="_on_downbtn_button_up"]
